# ear

./: .gitmodules  CMakeLists.txt  readme.org  todo.org
include/comm/: endpoint.h  receiver.h  transmitter.h
include/io/: controller.h  device.h
include/sched/: one_shot_task.h  periodic_task.h  scheduler.h  task.h
include/util/: preference_manager.h
sample/: CMakeLists.txt
sample/config/: config.json
sample/include/: location_service.h
sample/src/: main.cpp
samples/include/: dcu_service.h
samples/pipeline/src/: dcu_service.cpp  location_service.cpp
samples/src/: main.cpp
src/comm/: CMakeLists.txt  receiver.cpp  transmitter.cpp
src/io/: CMakeLists.txt
src/sched/: CMakeLists.txt
src/util/: CMakeLists.txt  preference_manager.cpp
